Adding some containers which do not use "new"